feat: add forecast nilm & finish basic app
